config/virtualservice/api-awokenin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-awokenin-vs
  namespace: istio-system
spec:
  hosts:
  - "api.awokenin.com"
  gateways:
  - awokenin-gateway
  http:
  - match:
    - uri:
        prefix: "/api/v1/user"
    route:
    - destination:
        host: awkn-user-api-service.awkn-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: "/api/v1/admin"
    route:
    - destination:
        host: awkn-admin-api-service.awkn-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: "/image"
    route:
    - destination:
        host: nodeapp-service.awkn-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: "/api/v1/blog"
    route:
    - destination:
        host: awkn-blog-api-service.awkn-dev.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: "/api/v1/socialwall/user"
    route:
    - destination:
        host: awkn-socialwall-user-api-service.awkn-dev.svc.cluster.local
        port:
          number: 80
