config/virtualservice/blogs-awokenin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blogs-awokenin-vs
  namespace: istio-system
spec:
  hosts:
  - "blogs.awokenin.com"
  gateways:
  - awokenin-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: awkn-blog-ui-service.awkn-dev.svc.cluster.local
        port:
          number: 80
