config/virtualservice/dev-api-awokenin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dev-api-awokenin-vs
  namespace: istio-system
spec:
  hosts:
    - "dev.api.awokenin.com"
  gateways:
    - awokenin-gateway
  http:
    - match:
        - uri:
            prefix: "/api/v1/user"
      route:
        - destination:
            host: awkn-user-api-service.awkn-dev.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/api/v1/admin"
      route:
        - destination:
            host: awkn-admin-api-service.awkn-dev.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/image"
      route:
        - destination:
            host: nodeapp-service.awkn-dev.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/video"
      route:
        - destination:
            host: nodeapp-service.awkn-dev.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/api/v1/blog"
      route:
        - destination:
            host: awkn-blog-api-service.awkn-dev.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/api/v1/socialwall/user"
      route:
        - destination:
            host: awkn-socialwall-user-api-service.awkn-dev.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/api/v1/corporate"
      route:
        - destination:
            host: awkn-corporate-page-api-service.awkn-dev.svc.cluster.local
            port:
              number: 80
    # - match:
    #     - uri:
    #         prefix: "/extract"
    #   route:
    #     - destination:
    #         host: awkn-resume-parser-api-service.awkn-dev.svc.cluster.local
    #         port:
    #           number: 80
    - match:
        - uri:
            prefix: "/resume"
      route:
        - destination:
            host: nodeapp-service.awkn-dev.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/extract_resume"
      route:
        - destination:
            host: python-resume-parser.awkn-dev.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: "/socket"
      route:
        - destination:
            host: awkn-socket-io-backend-service.awkn-dev.svc.cluster.local
            port:
              number: 80
