config/virtualservice/dev-socket.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dev-socket-awokenin-vs
  namespace: istio-system
spec:
  hosts:
  - "dev.socket.awokenin.com"
  gateways:
  - awokenin-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: awkn-socket-io-backend-service.awkn-dev.svc.cluster.local
        port:
          number: 80
